--- a/netlify/package.json
+++ b/netlify/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "scripts": {
         "start": "netlify dev",
-        "build": "netlify build",
+        "build": "netlify run build",
         "deploy": "netlify deploy",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
