--- a/netlify/package.json
+++ b/netlify/package.json
@@ -9,7 +9,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "axios": "^0.24.0",
+        "axios": "*",
         "cheerio": "^1.0.0-rc.10",
         "qs": "^6.11.2"
     },
