--- a/netlify/package.json
+++ b/netlify/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "scripts": {
     "start": "netlify dev",
-    "build": "netlify build",
+    "build": "npm run install-functions && netlify build",
     "deploy": "netlify deploy",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install-functions": "cd netlify/functions && npm install"
   },
   "dependencies": {
     "axios": "^0.24.0",
