--- a/netlify/netlify.toml
+++ b/netlify/netlify.toml
@@ -14,7 +14,7 @@ Content-Type = "application/json"
 
 # Build settings
 [build]
-command = "npm install && cd /function && npm install && cd ... & npm run build"  # Modify this command based on your build setup
+command = "npm install"  # Modify this command based on your build setup
 functions = "functions"  # Specify the functions directory name
 
 # Header settings
@@ -40,5 +40,4 @@ status = 200
 
 [[plugins]]
 package = "@netlify/plugin-functions-install-core"
-
 
