--- a/netlify/package.json
+++ b/netlify/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "storm-weather",
+  "name": "severe-weather",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "index.html",
   "scripts": {
-    "start": "netlify dev",
-    "build": "npm run install-functions && netlify build",
-    "deploy": "netlify deploy",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install-functions": "cd netlify/functions && npm install"
+    "test": "jester"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.44.0",
+    "jester": "^0.2.3",
+    "netlify-cli": "^15.8.1"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "cheerio": "^1.0.0-rc.10",
-    "qs": "^6.11.2"
-  },
-  "devDependencies": {
-    "netlify-cli": "^6.7.1"
-  },
-  "engines": {
-    "node": ">=12"
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "google-auth-library": "^8.9.0",
+    "google-spreadsheet": "^4.0.2"
   }
 }
