--- a/netlify/package.json
+++ b/netlify/package.json
@@ -12,9 +12,11 @@
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "google-auth-library": "^8.9.0",
-    "google-spreadsheet": "^4.0.2"
-}
+    "google-spreadsheet": "^4.0.2" // Missing comma was added here
+  },
   "devDependencies": {
     "eslint": "^8.44.0",
     "jester": "^0.2.3",
     "netlify-cli": "^15.8.1"
+  }
+}
