--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "google-auth-library": "^8.9.0",
-    "google-spreadsheet": "^4.0.2" // Missing comma was added here
+    "google-spreadsheet": "^4.0.2"
   },
   "devDependencies": {
     "eslint": "^8.44.0",
