--- a/netlify/netlify.toml
+++ b/netlify/netlify.toml
@@ -17,7 +17,7 @@ to = "/icons/favicon.ico"
 status = 200
 
 [build]
-publish = "public" # The directory to publish
+functions = "functions"
 
 [functions]
 directory = "functions"
